# pyircsdk

./: Makefile  README.md  package-lock.json  package.json  pyproject.toml  release.config.js  requirements.txt  setup.py
.github/workflows/: build.yaml  semantic-pr.yaml
examples/: example.py
examples/modules/hello/: hello.py
examples/modules/quit/: quit.py
examples/modules/urlparse/: urlparse.py
pyircsdk/: __about__.py  __init__.py  command.py  message.py  pyircsdk.py  pyircsdk_test.py
pyircsdk/event/: event.py
tests/: command_test.py  config_test.py  event_test.py  message_test.py  pyircsdk_test.py  stress_test.py
